--- a/NOVA/Web.config
+++ b/NOVA/Web.config
@@ -26,7 +26,7 @@
       </system.Web>
   -->
   <system.web>
-	  <machineKey validationKey="AutoGenerate"/>
+	  <machineKey validationKey="AutoGenerate" />
     <globalization uiCulture="tr" culture="tr-TR" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="windows-1254" />
     <authentication mode="Forms">
       <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="525600" cookieless="UseCookies" />
@@ -314,6 +314,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.20.0.0" newVersion="2.20.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
