--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -5,8 +5,11 @@
   <package id="Azure.Core" version="1.31.0" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
+  <package id="ClosedXML" version="0.102.2" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="2.20.0" targetFramework="net481" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
   <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net48" />
+  <package id="Irony.NetCore" version="1.0.11" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="JavaScriptEngineSwitcher.Core" version="3.21.0" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
@@ -114,7 +117,7 @@
   <package id="ServiceStack.Client" version="6.8.0" targetFramework="net481" />
   <package id="ServiceStack.Interfaces" version="6.8.0" targetFramework="net481" />
   <package id="ServiceStack.Text" version="6.8.0" targetFramework="net481" />
-  <package id="SixLabors.Fonts" version="1.0.0-beta18" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net48" />
   <package id="SixLabors.ImageSharp" version="2.1.3" targetFramework="net48" />
   <package id="SixLabors.ImageSharp.Drawing" version="1.0.0-beta15" targetFramework="net48" />
   <package id="SweetAlert" version="1.0.0" targetFramework="net48" />
@@ -139,6 +142,7 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="6.0.0" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="7.0.0" targetFramework="net48" />
   <package id="System.IO.UnmanagedMemoryStream" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
@@ -172,6 +176,7 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.2" targetFramework="net481" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
@@ -186,4 +191,5 @@
   <package id="Tavis.UriTemplates" version="2.0.0" targetFramework="net481" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
+  <package id="XLParser" version="1.5.2" targetFramework="net48" />
 </packages>
